--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#portfolio">Projects</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact Me</a></li>
       </ul>
@@ -28,21 +28,23 @@
     <section id="about">
       <h1 class="headings">ABOUT ME</h1>
       <div id="pic">
-        <img src="DSC_0224.jpeg" alt="">
+         <img src="DSC_0224.jpeg" alt="">
         <div id="intro">
           <h2>Sumaya Gure</h2>
-          <p> My name is Sumaya.I hold a Bsc in Logistics Management,
-            I live in Birmingham City but I call many places home.
-             i hold a Bsc in Logistics Management from the university of Ningbo in China.
-            I am new Developer i start learning at the bootcamp university of birminghamis my new passion,
-            i love what i do and i adore the swimming inside tech world.  i am a polyglot a painter and a photographer, 
-            love travelling, enjoy the family times and friends.
+          <p> My name is Sumaya.I hold a Bsc in Logistics Management </p>
+          <p> I live in Birmingham City but I call many places home. </p>
+          <p> i hold a Bsc in Logistics Management from the university of Ningbo in China.</p>
+          <p> I am new Developer i start learning at the bootcamp </p>
+          <p> university of birminghamis my new passion,</p>
+         <p>i love what i do and i adore the swimming inside tech world. 
+         <p> i am a polyglot a painter and a photographer, </p>
+            love travelling, enjoy the family times and friends.</p> 
           </p>
         </div>
       </div>
     </section>
     <section id="portfolio">
-      <h1 class="headings">PORTFOLIO</h1>
+      <h1 class="headings">PROJECTS</h1>
       <div class="gallery">
         <img src="127.0.0.1_5503_index.html.png" alt="">
         <img src="63-1-2048x1536.jpg" alt="">
