--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="Assets/css/style.css" />
   <head>
   <body>
     <nav class="navbar">
@@ -28,7 +28,7 @@
     <section id="about">
       <h1 class="headings">ABOUT ME</h1>
       <div id="pic">
-         <img src="DSC_0224.jpeg" alt="">
+         <img src="assets/css/DSC_0224.jpeg" alt="">
         <div id="intro">
           <h2>Sumaya Gure</h2>
           <p> My name is Sumaya.I hold a Bsc in Logistics Management </p>
@@ -46,25 +46,25 @@
     <section id="portfolio">
       <h1 class="headings">PROJECTS</h1>
       <div class="gallery">
-        <img src="127.0.0.1_5503_index.html.png" alt="">
-        <img src="63-1-2048x1536.jpg" alt="">
-        <img src="photo-1542831371-29b0f74f9713-2.jpg" alt="">
-        <img src="SJO_105_0166_Final_2704-notrees-grey-2.jpg" alt="">
+        <img src="assets/css/127.0.0.1_5503_index.html.png" alt="">
+        <img src="assets/css/63-1-2048x1536.jpg" alt="">
+        <img src="assets/css/photo-1542831371-29b0f74f9713-2.jpg" alt="">
+        <img src="assets/css/SJO_105_0166_Final_2704-notrees-grey-2.jpg" alt="">
       </div>
     </section>
     <section id="services">
       <h1 class="headings">services</h1>
       <div class="row">
           <a href="https://www.instagram.com/sumaya.bile/" target="_blank" class="box">  
-          <img src="283-2834622_big-instagram-logo-vector-instagram-icon-white-png.jpg" alt="">
+          <img src="assets/css/283-2834622_big-instagram-logo-vector-instagram-icon-white-png.jpg" alt="">
           <h1 class="headings"> Instagram</h1>
           </a>
           <a href="https://www.linkedin.com/in/sumaya-gure-89625a11a" target="_blank" class="box">
-          <img src="linkden.png" alt="">
+          <img src="assets/css/linkden.png" alt="">
           <h2 class="headings"> Linkden </h2>
           </a>
           <a href="https://github.com/SuM949" target="_blank" class="box">
-          <img src="Github Logo Vector - Designlogovector.jpeg" alt="">
+          <img src="assets/css/Github Logo Vector - Designlogovector.jpeg" alt="">
           <h1 class="headings"> Github</h1>
           </a>
     </section>
