--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#portfolio">Projects</a></li>
-        <li><a href="#services">Services</a></li>
+        <li><a href="#Social Media">Social Media</a></li>
         <li><a href="#contact">Contact Me</a></li>
       </ul>
     </nav>
@@ -28,7 +28,7 @@
     <section id="about">
       <h1 class="headings">ABOUT ME</h1>
       <div id="pic">
-         <img src="./assets/css/DSC_0224.jpeg" alt="">
+         <img src="./Assets/css/DSC_0224.jpeg" alt="">
         <div id="intro">
           <h2>Sumaya Gure</h2>
           <p> My name is Sumaya.I hold a Bsc in Logistics Management </p>
@@ -53,7 +53,7 @@
       </div>
     </section>
     <section id="services">
-      <h1 class="headings">services</h1>
+      <h1 class="headings">social media</h1>
       <div class="row">
           <a href="https://www.instagram.com/sumaya.bile/" target="_blank" class="box">  
           <img src="./Assets/css/283-2834622_big-instagram-logo-vector-instagram-icon-white-png.jpg" alt="">
@@ -64,7 +64,7 @@
           <h2 class="headings"> Linkden </h2>
           </a>
           <a href="https://github.com/SuM949" target="_blank" class="box">
-          <img src="./Assets/css/Github Logo Vector - Designlogovector.jpeg Logo Vector - Designlogovector.jpeg" alt="">
+          <img src="./Assets/css/Github Logo Vector - Designlogovector.jpeg" alt="">
           <h1 class="headings"> Github</h1>
           </a>
     </section>
