--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="main">
         <h1 class="heading">I AM <br>SUMAYA GURE</h1>
         <button class="btn">
-          Welcome
+          Scroll Down
         </button>
       </div>
     </section>
